# stockmanager

./: .gitignore  README.md  docker-compose.kafka.yml  docker-compose.yml  example.csv  sample.env
importer/: Dockerfile  app.py  consts.py  helpers.py  kafka_producers.py  logger.py  pyproject.toml  requirements.txt
service/: Dockerfile  app.py  connection.py  consts.py  event_processor.py  helpers.py  kafka_consumers.py  kafka_producers.py  logger.py  pyproject.toml
